...
    <string name="cometchat_thread_unmute" translatable="true">Subscribe to thread</string>
    <string name="cometchat_copy" translatable="true">Copy</string>
    <string name="cometchat_translate" translatable="true">Translate</string>
    <string name="cometchat_message_privately" translatable="true">Message Privately</string>
    <string name="cometchat_reply_uppercase" translatable="true">Reply In Thread</string>
    <string name="cometchat_info" translatable="true">"Info"</string>
    <string name="cometchat_online" translatable="true">Online</string>
    <string name="cometchat_offline" translatable="true">Offline</string>
    <string name="cometchat_attach_image" translatable="true">Attach Image</string>
    <string name="cometchat_attach_video" translatable="true">Attach Video</string>
    <string name="cometchat_poll" translatable="true">Poll</string>
    <string name="cometchat_camera" translatable="true">Camera</string>
    <string name="cometchat_yes" translatable="true">Yes</string>
...
    <string name="cometchat_chat_history" translatable="true">Chat History</string>
    <string name="cometchat_thinking" translatable="false">Thinking...</string>
    <string name="cometchat_ask_anything" translatable="true">Ask anything…</string>
    <string name="cometchat_something_went_wrong_try_again" translatable="true">Something went wrong on our end. Please try again. </string>
    <string name="cometchat_messages">Messages</string>

    <string name="cometchat_menu">Menu</string>
    <string name="cometchat_menu_search">Search</string>
    <string name="cometchat_menu_conversation_summary">Conversation Summary</string>
    <string name="cometchat_see_more">See More</string>
    <string name="cometchat_message_option_more" translatable="true">More</string>
    <string name="cometchat_message_option_back" translatable="true">Back</string>
    <string name="cometchat_show_n_more" translatable="true" formatted="true">Show +%1$d more</string>
    <string name="cometchat_n_more" translatable="true" formatted="true">+%1$d more</string>
    <string name="cometchat_show_less" translatable="true">Show less</string>
    <string name="cometchat_no_results">No Results</string>
    <string name="cometchat_no_matches_found">We couldn’t find any matches.\nPlease try a different search keyword.</string>
    <string name="cometchat_start_your_search">Start Your Search</string>
...
    <string name="cometchat_a11y_bold">Bold</string>
    <string name="cometchat_a11y_bullet_list">Bullet List</string>
    <string name="cometchat_a11y_call">Call: %1$s</string>
    <string name="cometchat_a11y_caller">Caller: %1$s</string>
    <string name="cometchat_a11y_calling">Calling %1$s</string>
    <string name="cometchat_a11y_change_scope">Change Scope</string>
    <string name="cometchat_a11y_chat_history">Chat history</string>
    <string name="cometchat_a11y_clear_search">Clear search</string>
    <string name="cometchat_a11y_close">Close</string>
    <string name="cometchat_a11y_close_conversation_summary">Close conversation summary</string>
    <string name="cometchat_a11y_close_edit_preview">Close edit preview</string>
    <string name="cometchat_a11y_close_formatting_toolbar">Close formatting toolbar</string>
    <string name="cometchat_a11y_close_preview">Close preview</string>
...
    <string name="cometchat_a11y_message_list">Message list</string>
    <string name="cometchat_a11y_message_preview">Message preview: %1$s - %2$s</string>
    <string name="cometchat_a11y_microphone_disabled">Microphone (disabled)</string>
    <string name="cometchat_a11y_moderation_warning">Moderation warning</string>
    <string name="cometchat_a11y_more">More</string>
    <string name="cometchat_a11y_more_options">More options</string>
    <string name="cometchat_a11y_new_chat">New chat</string>
    <string name="cometchat_a11y_notification_from">Notification from %1$s</string>
    <string name="cometchat_a11y_numbered_list">Numbered List</string>
    <string name="cometchat_a11y_ongoing_call">Ongoing call</string>
    <string name="cometchat_a11y_open_ai_options">Open AI options</string>
    <string name="cometchat_a11y_options">Options</string>
    <string name="cometchat_a11y_outgoing_call_to">Outgoing call to %1$s</string>
...
